# ComfyUI-layerdiffuse

./: README.md  __init__.py  layered_diffusion.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish_action.yaml
example_workflows/: layer_diffusion_cond_example.json  layer_diffusion_cond_fg_all.json  layer_diffusion_cond_joint_bg.json  layer_diffusion_cond_joint_fg.json  layer_diffusion_diff_bg.json  layer_diffusion_diff_bg_stop_at.json  layer_diffusion_diff_fg.json  layer_diffusion_fg_example_rgba.json
examples/: layer_diffusion_cond_example.json  layer_diffusion_cond_fg_all.json  layer_diffusion_diff_bg.json  layer_diffusion_diff_bg_stop_at.json  layer_diffusion_diff_fg.json  layer_diffusion_fg_example.json  layer_diffusion_fg_example_rgba.json  layer_diffusion_joint.json  layered_diffusion_fg_example.json
lib_layerdiffusion/: attention_sharing.py  enums.py  models.py  utils.py
locales/en/: main.json  nodeDefs.json
locales/fr/: main.json  nodeDefs.json
locales/ja/: main.json  nodeDefs.json
locales/ko/: main.json  nodeDefs.json
locales/ru/: main.json  nodeDefs.json
locales/zh/: main.json  nodeDefs.json
